# Real-time-embedded-project

./: CMakeLists.txt  FallChecker.cpp  FallDetector.cpp  FallDetector.h  LICENSE  README.md  main.cpp
lib/: All Libs link
src/: FallChecker.cpp  FallChecker.h  FallDetector.cpp  FallDetector.h  main.cpp
test/: video.cpp
